# cNpRPi

./: .gitignore  .gitmodules  CMakeLists.txt  CnPtest  RPiConfig.json  ReadMe.md  compileCnP.sh  startRPiDebug.sh
CapNprotoLib/: Build_CapNProto_RPi.sh  Build_CapNProto_x86.sh
CapNprotoLib/CnPlibRPiInstall/lib/cmake/CapnProto/: CapnProtoConfigVersion.cmake  CapnProtoTargets-noconfig.cmake
CapNprotoLib/CnPlibRPiInstall/lib/pkgconfig/: capnp.pc  kj-http.pc  kj-test.pc  kj.pc
CapNprotoLib/RPiBuild/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
CapNprotoLib/RPiBuild/cmake/: CapnProtoConfig.cmake  CapnProtoTargets.cmake
CapNprotoLib/RPiBuild/pkgconfig/: capnp-json.pc  capnp-rpc.pc  kj-async.pc
CapNprotoLib/RPiBuild/src/: Makefile  cmake_install.cmake
CapNprotoLib/RPiBuild/src/capnp/: Makefile  capnpc-capnp  cmake_install.cmake
CapNprotoLib/RPiBuild/src/kj/: Makefile  cmake_install.cmake
CapNprotoLib/RPiPreBuilt/: capnproto_0.7.0-5.dsc  capnproto_0.7.0-5_armhf.deb  libcapnp-dev_0.7.0-5_armhf.deb
RPiClient/: CMakeLists.txt
RPiClient/src/: main.cpp
cudaTest/: CMakeLists.txt
cudaTest/lib/: simpleAssert.cu  simpleAssert.hpp
cudaTest/src/: main.cpp  main.cu  main.hpp
resource/: .gitignore  schema.capnp  schema.capnp.Вт. янв. 28 23:15:43 MSK 2020  schema.capnp.Вт. янв. 28 23:16:24 MSK 2020  schema.capnp.Вт. янв. 28 23:33:30 MSK 2020
resource/media/constantine/Work/BOARDS/RASPBERRY/workspace/CapNProto/resource/: schema.capnp.c++
x86CnPtest/: CMakeLists.txt
x86CnPtest/resource/: .gitignore
x86Test/: CMakeLists.txt
x86Test/resource/: test.capnp  test.capnp.c++  test.capnp.Вт. янв. 28 23:33:30 MSK 2020
x86Test/src/: main.cpp
x86out/: CnPtest.out  x86server.out
x86server/: CMakeLists.txt
x86server/src/: main.cpp
